--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
-Date: ????
+Date: 2023-03-11
 
   Changes:
     - Removed the `/undeletable-fluids-nullius-preset` command, which will now be auto-applied when Nullius is detected.
