--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.4
-Date: ????
+Date: 2023-10-17
   Bugfixes:
     - Fixed some fluids disappearing when trying to flush a fluid in a system that had multiple fluids.
     - Fixed destroying a fluid (with "Prevent destruction" setting) not preserving temperature.
